order/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-be
  name: order-be
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-be
  template:
    metadata:
      labels:
        app: order-be
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
        - "-text=Order Service Connected to Product + DB"
        ports:
        - containerPort: 5678
        resources: 
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
