order/order-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order-be    
  ports:
  - port: 80
    targetPort: 5678
